--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="row">
       <div class="col-md-6">
-        <h2>Add a place:</h2>
+        <h2>Add a task:</h2>
         <form id="toDoForm">
           <div class="form-group">
             <label for="location">Add a task</label>
